fixing contacts overflow

--- a/client/src/css/chat.scss
+++ b/client/src/css/chat.scss
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    gap: 0.5rem;
 
     width: 22%;
     background: #1a1a1a;
@@ -31,6 +31,22 @@
       width: 100%;
       height: 1px;
       background: rgb(225, 225, 225);
+    }
+
+    .contacts {
+      &::-webkit-scrollbar {
+        width: 5px;
+      }
+
+      &::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+      }
+
+      &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: darkgrey;
+        outline: 1px solid slategrey;
+      }
     }
 
     .userCard-container {
